--- a/src/app/core/components/main-menu-header/main-menu-header.component.html
+++ b/src/app/core/components/main-menu-header/main-menu-header.component.html
@@ -3,4 +3,6 @@
 </div>
 <div class="user-info">
         <h3>{{user?.name}}</h3>
+        <h4>{{user?.email | emailPipe}}</h4>
+        <span>{{today | date:"medium"}}</span>
 </div>
