--- a/src/app/core/containers/aside-left/aside-left.component.html
+++ b/src/app/core/containers/aside-left/aside-left.component.html
@@ -1,4 +1,4 @@
-<aside id="idaside" class="left-aside">
+<aside id="idaside" class="left-aside" [@asideAnimation]='asideState'>
     <div class="aside-header">
        <app-main-menu-header [user]="user"></app-main-menu-header>
     </div>
