--- a/src/app/core/containers/top-nav-bar/top-nav-bar.component.html
+++ b/src/app/core/containers/top-nav-bar/top-nav-bar.component.html
@@ -1,6 +1,6 @@
 <header class="pokeNavBar row align-items-center">
   <div class="col">
-      <a class="toggle-sidebar">
+      <a class="toggle-sidebar" (click)="asideStateChange($event)">
       <i class="fa fa-bars"></i></a>
       <h1>Poke App 2</h1>
   </div>
