--- a/src/app/core/containers/aside-left/aside-left.component.html
+++ b/src/app/core/containers/aside-left/aside-left.component.html
@@ -1,4 +1,4 @@
-<aside id="idaside" class="left-aside" [@asideAnimation]='stateClick'>
+<aside id="idaside" class="left-aside" [@asideAnimation]='stateClick' [ngClass]="(stateClick == 'close'?'left-aside2':'')">
     <div class="aside-header">
        <app-main-menu-header [user]="user"></app-main-menu-header>
     </div>
