--- a/src/app/core/components/main-menu/main-menu.component.html
+++ b/src/app/core/components/main-menu/main-menu.component.html
@@ -6,10 +6,10 @@
         </a>
     </li>
      <li class="nav-item">
-        <a class="nav-link">
-            <i class="fa fa-book"></i>
-            <span>Colecciones</span>
-        </a>
+        <a class="nav-link" href="#/collections">
+            <i class="fa fa-book" aria-hidden="true"></i>
+            <span>Colección</span>
+         </a>
     </li>
      <li class="nav-item">
         <a class="nav-link">
