--- a/src/app/core/components/main-menu/main-menu.component.html
+++ b/src/app/core/components/main-menu/main-menu.component.html
@@ -6,7 +6,7 @@
         </a>
     </li>
      <li class="nav-item">
-        <a class="nav-link" href="#/collections">
+        <a class="nav-link" [routerLink]="['../main/']">
             <i class="fa fa-book" aria-hidden="true"></i>
             <span>Colección</span>
          </a>
