routing collections.module

--- a/src/app/poke-main/containers/main-content/main-content.component.html
+++ b/src/app/poke-main/containers/main-content/main-content.component.html
@@ -20,7 +20,7 @@
                 <div class="card-body">
                     <p class="card-text">{{book.volumeInfo.publisher}}</p>
                     <p class="card-text">{{book.volumeInfo.publishedDate}}</p>
-                    <!--<a [routerLink]="['../detail/',book.id]" class="btn btn-primary col-12 col-md-auto col-lg-auto">Ver Detalle</a>-->
+                    <a [routerLink]="['../detail/',book.id]" class="btn btn-primary col-12 col-md-auto col-lg-auto">Ver Detalle</a>
                 </div>
             </div>
         </div>
