--- a/src/app/core/components/main-menu/main-menu.component.html
+++ b/src/app/core/components/main-menu/main-menu.component.html
@@ -1,12 +1,12 @@
 <ul class="main-menu nav flex-column">
     <li class="nav-item">
-        <a class="nav-link">
+        <a class="nav-link"  [routerLink]="['../main/pokemons']">
             <i class="fa fa-tachometer"></i>
             <span>Inicio</span>
         </a>
     </li>
      <li class="nav-item">
-        <a class="nav-link" [routerLink]="['../main/']">
+        <a class="nav-link" [routerLink]="['collections']">
             <i class="fa fa-book" aria-hidden="true"></i>
             <span>Colección</span>
          </a>
