alert, consume api

--- a/src/app/poke-main/containers/main-content/main-content.component.html
+++ b/src/app/poke-main/containers/main-content/main-content.component.html
@@ -8,7 +8,7 @@
         </li>
     </ol>
 </nav>
-
+<app-alert-messages></app-alert-messages>
 <section class="container content">
     <div class="row" id="books">
         <div *ngFor="let book of books" class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-2">
