--- a/src/app/core/containers/core/core.component.html
+++ b/src/app/core/containers/core/core.component.html
@@ -6,9 +6,8 @@
 </div>
 <div class="row body-content">
   <app-aside-left [stateClick]="stateHamburguer" class="col-3"></app-aside-left>
-  <!--app-main-content [dataBook]="dataBook" class="col-9 main-section"></app-main-content-->
  <div  class="col-9 main-section">
-   <router-outlet></router-outlet> 
+   <app-main-content class="col-9 main-section"></app-main-content>
   </div>
 </div>
 </div>
