--- a/src/app/auth/containers/login/login.component.html
+++ b/src/app/auth/containers/login/login.component.html
@@ -55,7 +55,7 @@
                     <div class="shape6"></div>
                     <div class="shape7"></div>
                     <div class="float">
-                        
+    
                         <form [formGroup]="loginForm" (ngSubmit)="submit()" class="form" action="">
                             <div class="form-group">
                                 <label for="username" class="text-white">Username:</label><br>
@@ -69,6 +69,9 @@
                                 <input [disabled]="!loginForm.valid" type="submit" name="submit" class="btn btn-info btn-md" value="submit">
                             </div>
                         </form>
+                        <div>
+                             <input type="submit" (click)= "signWithGoogle()" name="submitGoogle" class="btn btn-info btn-md" value="G+">
+                        </div>
                     </div>
                 </div>
             </div>
