--- a/src/app/core/components/main-menu/main-menu.component.html
+++ b/src/app/core/components/main-menu/main-menu.component.html
@@ -12,7 +12,7 @@
          </a>
     </li>
      <li class="nav-item">
-        <a class="nav-link">
+        <a class="nav-link"  [routerLink]="['favorites']">
             <i class="fa fa-star"></i>
             <span>Favorito</span>
         </a>
