--- a/src/app/collections/containers/poke-collections/poke-collections.component.html
+++ b/src/app/collections/containers/poke-collections/poke-collections.component.html
@@ -1,3 +1,3 @@
-<p>
-  poke-collections works!
-</p>
+<div>
+  <button type="button" (click)="open()" class="btn btn-primary">Add Collection</button>
+</div>
