--- a/src/app/poke-main/containers/main-content/main-content.component.html
+++ b/src/app/poke-main/containers/main-content/main-content.component.html
@@ -1,25 +1,32 @@
 <div class="row" id="books">
-        <div *ngFor="let book of books" class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-2">
-            <div class="card">
-                <div class="card-header">
-                    {{book.name}}
-                </div>
-               <img class="card-img-top" src="{{book.sprites.back_default}}" />
-              <!--  <div class="card-body">
-                    <p class="card-text">{{book.volumeInfo.publisher}}</p>
-                    <p class="card-text">{{book.volumeInfo.publishedDate}}</p>
-                    <div class= "row">
-                        <div class="col-6">
-                            <button class="btn btn-primary" (click)="addFavorite(book)">
-                                <i class="fa fa-heart"></i>Favorite
-                            </button>
-                        </div>
-                        <div class="col-6">
-                                <a [routerLink]="['../detail/',book.id]" class="btn btn-primary col-12 col-md-auto col-lg-auto">Ver Detalle</a>
-                        </div>
-
+    <div *ngFor="let book of books" class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3">
+        <div class="card">
+            <div class="card-header">
+                {{book.name}}
+            </div>
+            <img class="card-img-top" src="{{book.sprites.front_default}}" />
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-12">
+                        <h3 class="card-text">
+                            Habilidades:
+                        </h3>
                     </div>
-                </div>--> 
+                    <div class="col-12">
+                        <span *ngFor="let ab of book?.abilities" class="badge badge-pill badge-success">{{ab?.ability.name}}</span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-2">
+                        <button class="btn btn-primary" (click)="addFavorite(book)">
+                            <i class="fa fa-heart"></i></button>
+                    </div>
+                    <div class="col-6">
+                        <a [routerLink]="['../detail/',book.id]" class="btn btn-primary col-12 col-md-auto col-lg-auto">Ver
+                            Detalle</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+</div>
